fixed alignment issue

--- a/amundsen_application/static/js/components/DashboardPage/RunState/styles.scss
+++ b/amundsen_application/static/js/components/DashboardPage/RunState/styles.scss
@@ -9,7 +9,7 @@
     height: 14px;
     border-radius: 100%;
     display: inline-block;
-    margin-bottom: -1px;
+    vertical-align: middle;
 }
 .missed-icon {
     background-color: #DB3615;
@@ -30,17 +30,18 @@
 
 .hit-icon{
     background-color: #00824C;
-
     .icon-check {
         background-color: #F2F2F2;
         width: 10px;
         height: 10px;
         margin-top: -10px;
         margin-left: 2px;
+        min-width: 0px;
     }
 }
 
 .status-text {
     display: inline-block;
     margin-left: $spacer-1;
+    vertical-align: middle;
 }
